<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="desc_restaurant_photo">Photo of the restaurant</string>
    <string name="desc_person">Persons</string>
    <string name="desc_star">Star</string>
    <string name="title_map_view">Map View</string>
    <string name="title_list_view">List View</string>
    <string name="title_workmates">Workmates</string>
    <string name="desc_workmate_photo">Workmate\'s profile picture</string>
    <string name="title_search">Search</string>
    <string name="desc_header_image">A dinner photo.</string>
    <string name="desc_user_photo">Your profile picture</string>
    <string name="title_your_lunch">Your lunch</string>
    <string name="title_settings">Settings</string>
    <string name="title_logout">Logout</string>
    <string name="desc_open_drawer">Open navigation drawer</string>
    <string name="desc_close_drawer">Close navigation drawer</string>
    <string name="desc_login_background">Login background where people eat.</string>
    <string name="desc_app_logo">App\'s logo representing a soup.</string>
    <string name="app_description">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="desc_facebook_logo">Facebook logo</string>

    <string name="facebook_app_id">821515008451438</string>
    <string name="fb_login_protocol_scheme">fb821515008451438</string>

    <string name="desc_my_location">My current location.</string>
    <string name="retry">Re-try</string>
    <string name="cancel">Cancel</string>
    <string name="rational_title">Permission denied</string>
    <string name="rational_location_permission">This permission is required for us to localize you.</string>
    <string name="desc_join_restaurant">Join that restaurant</string>
    <string name="text_call">Call</string>
    <string name="text_like">Like</string>
    <string name="text_website">Website</string>
    <string name="text_location_error">The location services are disabled.</string>
    <string name="text_enable">Enable</string>
    <string name="text_user_joining">%1$s is joining!</string>

    <string name="notification_channel_name">Lunch reminder.</string>
    <string name="notification_channel_description">Notify you every 12 AM on where you eat and with who.</string>

    <string name="text_and">and</string>
    <string name="eat_notification_context_text">Hi! Today you\'re eating to %1$s in %2$s with</string>
    <string name="eat_notification_context_text_no_workmates">Hi! Today you\'re eating to %1$s in %2$s.</string>
    <string name="text_restaurant_not_chosen">You have not decided where to eat yet !</string>
    <string name="text_workmate_decided">%1$s is eating at %2$s</string>
    <string name="text_workmate_not_decided">%1$s hasn\'t decided yet</string>
    <string name="settings_enable_notification">Enable notifications</string>
    <string name="settings_enable_notification_summary">Send you every 12 AM information about your lunch.</string>
    <string name="title_sort_by">Sort by</string>
    <string name="text_sort">Sort</string>
    <string name="text_restaurant_opened">Opened</string>
    <string name="text_restaurant_closed">Closed</string>
    <string name="distance_meters" translatable="false">%1$dm</string>
    <string name="title_theme">Theme</string>

    <string name="pref_theme_default">System default</string>
    <string name="pref_theme_light">Light mode</string>
    <string name="pref_theme_dark">Dark mode</string>

    <string name="text_sort_distance">Distance</string>
    <string name="text_sort_rating">Rating</string>
    <string name="text_sort_workmates">Workmates joining</string>
    <string name="text_restaurant_closed_cant_join">Restaurant is closed, you can\'t join.</string>
    <string name="text_restaurant_opening_unknown">Unknown</string>
</resources>