<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="none">

        <item
            android:id="@+id/itemYourLunch"
            android:icon="@drawable/ic_cutlery"
            android:title="@string/title_your_lunch"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/itemSettings"
            android:icon="@drawable/ic_settings"
            android:title="@string/title_settings"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/itemLogout"
            android:icon="@drawable/ic_logout"
            android:title="@string/title_logout"
            app:showAsAction="ifRoom" />

    </group>

</menu>