<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:hideAnimationBehavior="outward"
        app:layout_constraintTop_toTopOf="parent"
        app:showAnimationBehavior="outward"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMyLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/map_view_myLocation_margin"
        android:contentDescription="@string/desc_my_location"
        android:src="@drawable/ic_my_location"
        app:backgroundTint="?attr/colorSurface"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="?attr/colorOnSurface"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLocationErrorContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/map_view_location_error_margin"
        android:background="@drawable/location_error_background"
        android:paddingHorizontal="@dimen/map_view_location_error_paddingHorizontal"
        android:theme="@style/ThemeOverlay.MaterialComponents.Light"
        android:visibility="invisible"
        app:elevation="20dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/tvLocationErrorMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/text_location_error"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnEnableLocation"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/btnEnableLocation"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_enable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>