<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <View
        android:id="@+id/vStatusZone"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/ivRestaurantPhoto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/desc_restaurant_photo"
        app:layout_constraintHeight_percent=".35"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/vStatusZone"
        app:navigationIconTint="?attr/colorOnPrimary"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabJoinRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/restaurant_fab_marginRight"
        android:contentDescription="@string/desc_join_restaurant"
        android:src="@drawable/ic_check_circle"
        app:backgroundTint="@color/fab_join_restaurant_background_color"
        app:layout_constraintBottom_toBottomOf="@id/ivRestaurantPhoto"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivRestaurantPhoto"
        app:tint="@color/fab_join_restaurant_color"
        />

    <View
        android:id="@+id/vDescriptionContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintHeight_percent=".125"
        app:layout_constraintTop_toBottomOf="@id/ivRestaurantPhoto"
        />

    <TextView
        android:id="@+id/tvRestaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/restaurant_restaurant_name_margin"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintLeft_toLeftOf="@id/vDescriptionContainer"
        app:layout_constraintTop_toTopOf="@id/vDescriptionContainer"
        tools:text="Le Zinc"
        />

    <LinearLayout
        android:id="@+id/linearLayoutRating"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/item_restaurant_star_size"
        android:layout_marginStart="@dimen/restaurant_restaurant_name_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/tvRestaurantName"
        app:layout_constraintLeft_toRightOf="@id/tvRestaurantName"
        app:layout_constraintTop_toTopOf="@id/tvRestaurantName"
        />

    <TextView
        android:id="@+id/tvRestaurantAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintLeft_toLeftOf="@id/tvRestaurantName"
        app:layout_constraintTop_toBottomOf="@id/tvRestaurantName"
        tools:text="French restaurant - 12 rue du Faubourg Poissonnière"
        />

    <TextView
        android:id="@+id/tvCall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:drawablePadding="@dimen/restaurant_options_drawablePadding"
        android:focusable="true"
        android:paddingVertical="@dimen/restaurant_options_paddingVertical"
        android:text="@string/text_call"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/restaurant_layout_options_foreground_color"
        app:backgroundTint="@color/restaurant_layout_options_background_color"
        app:drawableTint="@color/restaurant_layout_options_foreground_color"
        app:drawableTopCompat="@drawable/ic_call"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvLike"
        app:layout_constraintTop_toBottomOf="@id/vDescriptionContainer"
        />

    <TextView
        android:id="@+id/tvLike"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:drawablePadding="@dimen/restaurant_options_drawablePadding"
        android:focusable="true"
        android:paddingVertical="@dimen/restaurant_options_paddingVertical"
        android:text="@string/text_like"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/restaurant_layout_options_foreground_color"
        app:backgroundTint="@color/restaurant_layout_options_background_color"
        app:drawableTint="@color/restaurant_layout_options_foreground_color"
        app:drawableTopCompat="@drawable/ic_star"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/tvCall"
        app:layout_constraintRight_toLeftOf="@id/tvWebsite"
        app:layout_constraintTop_toBottomOf="@id/vDescriptionContainer"
        />

    <TextView
        android:id="@+id/tvWebsite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:drawablePadding="@dimen/restaurant_options_drawablePadding"
        android:focusable="true"
        android:paddingVertical="@dimen/restaurant_options_paddingVertical"
        android:text="@string/text_website"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/restaurant_layout_options_foreground_color"
        app:backgroundTint="@color/restaurant_layout_options_background_color"
        app:drawableTint="@color/restaurant_layout_options_foreground_color"
        app:drawableTopCompat="@drawable/ic_globe"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/tvLike"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vDescriptionContainer"
        />

    <View
        android:id="@+id/vSeparation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/scrimBackground"
        app:layout_constraintTop_toBottomOf="@id/tvCall"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWorkmates"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vSeparation"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="2"
        tools:layout_editor_absoluteX="-131dp"
        tools:listitem="@layout/item_workmate_joining"
        />

</androidx.constraintlayout.widget.ConstraintLayout>